@@ -31,3 +31,4 @@ execute and execute all buttons
 add ability to execute current selection, change cursor to from and to
 use caching headers on js and css and html
 cache js, css and html at class level instead of instance
+use weak references to keep track of all clients. close connections on server shutdown
